--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-pydantic[email]==2.5.3
-python-dotenv==1.0.0
-python-multipart==0.0.6
-mysql-connector-python==8.2.0
+fastapi==0.115.0
+uvicorn[standard]==0.30.6
+pydantic==2.9.2
+pydantic[email]==2.9.2
+python-dotenv==1.0.1
+python-multipart==0.0.9
+mysql-connector-python==9.1.0
